Flashcard front/back overlapping fix for firefox

--- a/src/components/Flashcard.module.css
+++ b/src/components/Flashcard.module.css
@@ -25,6 +25,10 @@
     transform: rotateY(180deg);
 }
 
+.flashcard:hover .flashcardFront{
+    opacity: 0;
+}
+
 .flashcardInner {
     border-radius: 20px;
     position: relative;
@@ -32,7 +36,7 @@
     height: 100%;
     display: flex;
     align-items: center;
-    transition: transform 0.6s;
+    transition: transform 0.8s;
     transform-style: preserve-3d;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4);
 }
@@ -45,6 +49,7 @@
     position: absolute;
     width: 100%;
     backface-visibility: hidden;
+    transition: opacity 0.4s;
 }
 
 .flashcardBack {
